refactor: 全面架构改进 Phase 5-9 (God Class拆分/测试补充/API文档/前端重构)